chapter13/tls-demo/longhorn/longhorn-ingress01.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /longhorn(/|$)(.*)
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
  tls:
  - hosts: 
    - 10.228.81.99
    secretName: longhorn-tls
