chapter13/tls-demo/longhorn/longhorn-ingress02.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
spec:
  rules:
  - host: www.longhorn.bo    #配置访问域名，也就是常说的虚拟主机。这里的host与hosts需保持一致性哈。
    http:
      paths:
      - path: /
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
  tls:   #配置https协议
  - hosts:
    - www.longhorn.bo    #配置访问域名，也就是常说的虚拟主机
    secretName: longhorn-tls     #绑定secretName
